<resources>
    <string name="app_name">Shram</string>
    <string name="search">Search</string>
    <string name="sign_up_and_get_started_on_your_own_work">Sign up and get started on your own Work!!</string>
    <string name="sign_up_with_mobile_number">Sign Up With Mobile Number</string>
    <string name="sign_up_with_e_mail_instead">Sign up with E-mail instead</string>
    <string name="enter_your_mobile_no_or_e_mail_to_sign_into_your_shramik_account">Enter your Mobile no or E-mail to sign into your SHRAMIK Account.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="or">Or</string>
    <!--    <string name="email">Email</string>-->
    <!--    <string name="enter_your_email">Enter your Email</string>-->
    <!--    <string name="password">Password</string>-->
    <!--    <string name="enter_your_password">Enter your Password</string>-->
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="shram_just_sent_an_otp_to">SHRAM just sent an otp to</string>
    <!--    <string name="xxxxxxxx99">XXXXXXXX99</string>-->
    <!--    <string name="otp">OTP</string>-->
    <string name="haven_t_recieved_the_text">Haven\'t received the text?</string>
    <!--    <string name="resend_otp">resend OTP?</string>-->
    <!--    <string name="verify">Verify</string>-->
    <!--    <string name="name">Name</string>-->
    <!--    <string name="enter_your_name">Enter your Name</string>-->
    <!--    <string name="email">Email</string>-->
    <!--    <string name="enter_your_email">Enter your Email</string>-->
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <!--    <string name="sign_up">Sign Up</string>-->
    <!--    <string name="name">Name</string>-->
    <string name="enter_your_name">Enter your Name</string>
    <string name="phone">Phone</string>
    <string name="_91">+91</string>
    <string name="_99xxxxxxxx">99XXXXXXXX</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="shramik_just_sent_an_otp_to">SHRAMIK just sent an otp to</string>
    <string name="xxxxxxxx99">XXXXXXXX99</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">resend OTP?</string>
    <string name="verify">Verify</string>
    <string name="rating">Rating</string>
    <!--    <string name="explore">Explore</string>-->
    <!--    <string name="message">Message</string>-->
    <string name="name">Name</string>
    <string name="work">work</string>
    <string name="_4_74_58_rating" translatable="false">4.74 (58)Rating</string>
    <string name="experience">Experience</string>
    <string name="previously_worked_at">Previously worked at</string>
    <string name="call">Call</string>
    <!--    <string name="message">Message</string>-->
    <string name="report">Report</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="message">Message</string>
    <string name="jobs">Jobs</string>
    <string name="view_all">View All</string>
    <string name="workers">Workers</string>
    <string name="do_you_want_to_confirm_this_booking">Do you want to Confirm this booking</string>
    <string name="yes">Yes!</string>
    <string name="no">No!</string>
    <string name="location">Location-</string>
    <string name="skill">Skill</string>
    <string name="continuee">Continue</string>
    <string name="profession">Profession</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="carpenter">Carpenter</string>
    <string name="unskilled">Unskilled</string>
    <string name="thekedaar">Thekedaar</string>
    <string name="book_now">Book Now</string>
    <string name="add_address">Add Address</string>
    <string name="done">submit</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="enter_your_complaint">Enter your complaint</string>
</resources>