<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/reg_page"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shramik_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:layout_marginHorizontal="4dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/light_rounded_corners">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/enter_your_mobile_no_or_e_mail_to_sign_into_your_shramik_account"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:background="@drawable/dark_rounded_corners"
                android:paddingHorizontal="14dp"
                android:elevation="3dp"
                android:layout_marginLeft="3dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="3dp"
                android:maxLength="3"
                android:id="@+id/logphonstart"
                android:layout_marginRight="10dp"
                android:text="+91"
                android:textColor="@color/white"
                />

            <EditText
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:elevation="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:maxLength="10"
                android:paddingVertical="15dp"
                android:hint="@string/_99xxxxxxxx"
                android:id="@+id/logphoneend"
                android:textColorHint="@color/white"
                android:background="@drawable/dark_rounded_corners"
                android:ems="10"
                />
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/logemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:textColorHint="@color/white"
            android:layout_marginHorizontal="3dp"
            android:ems="10"
            android:background="@drawable/dark_rounded_corners"
            android:padding="15dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/logpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:textColorHint="@color/white"
            android:layout_marginHorizontal="3dp"
            android:ems="10"
            android:layout_marginBottom="3dp"
            android:background="@drawable/dark_rounded_corners"
            android:padding="15dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </LinearLayout>

    <Button
        android:id="@+id/logbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/light_blue_circle"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:backgroundTint="@color/inputBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/loggoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/light_blue_circle"
            android:layout_marginRight="30dp"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regbtn"
            app:srcCompat="@drawable/google_icon" />

        <ImageButton
            android:id="@+id/logfacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/light_blue_circle"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regbtn"
            app:srcCompat="@drawable/facebook_icon" />

    </LinearLayout>

</LinearLayout>