<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="@drawable/main_page"
    tools:context=".ReportPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="40dp"
        android:paddingHorizontal="20dp"
        android:elevation="5dp"
        android:background="@drawable/dark_rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/report"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/rsub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginVertical="20dp"
            android:gravity="start|top"
            android:hint="@string/enter_your_subject"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/rtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_your_complaint"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/rbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/inputBack"
            android:background="@drawable/light_blue_circle"
            android:layout_marginTop="50dp"
            android:text="@string/done" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>