<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/reg_page"
    android:padding="20dp"
    tools:context=".RegisterPhone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/phoneinput"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/shramik_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:elevation="6dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/dark_rounded_corners"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_and_get_started_on_your_own_work"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp" />
            <EditText
                android:id="@+id/regpname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:elevation="3dp"
                android:layout_marginHorizontal="3dp"
                android:textColorHint="@color/white"
                android:background="@drawable/light_rounded_corners"
                android:padding="15dp"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:hint="@string/enter_your_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:background="@drawable/light_rounded_corners"
                    android:paddingHorizontal="14dp"
                    android:elevation="3dp"
                    android:layout_marginLeft="3dp"
                    android:paddingVertical="15dp"
                    android:layout_marginBottom="3dp"
                    android:maxLength="3"
                    android:layout_marginRight="10dp"
                    android:text="@string/_91"
                    android:id="@+id/regphstart"
                    android:textColor="@color/white"
                    />

                <EditText
                    android:inputType="phone"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:elevation="3dp"
                    android:id="@+id/regphone"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:maxLength="10"
                    android:paddingVertical="15dp"
                    android:hint="@string/_99xxxxxxxx"
                    android:textColorHint="@color/white"
                    android:background="@drawable/light_rounded_corners"
                    android:ems="10"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/regpemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/white"
                android:elevation="3dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/light_rounded_corners"
                android:padding="15dp"
                android:hint="@string/enter_your_email"
                android:layout_marginBottom="3dp"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regemail" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBarSignup"
                style="?android:attr/progressBarStyle"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTint="@color/white" />

            <Button
                android:id="@+id/regbtnphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/light_blue_circle"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/inputBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regphone" />
        </FrameLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/reggoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/light_blue_circle"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regbtn"
                app:srcCompat="@drawable/google_icon" />

            <ImageButton
                android:id="@+id/regfacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/light_blue_circle"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regbtn"
                app:srcCompat="@drawable/facebook_icon" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>