<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/splash_page"
    tools:context=".Splash">

    <TextView
        android:id="@+id/logbtnsplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="@integer/material_motion_duration_long_2"
        android:shadowDy="@integer/material_motion_duration_long_2"
        android:text="@string/login"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbtnsplash"
        app:srcCompat="@drawable/shramik" />


    <Button
        android:id="@+id/regph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/light_blue_circle"
        android:text="@string/sign_up_with_mobile_number"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/regem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_up_with_e_mail_instead"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/round_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>